# KidsClaude

./: .gitignore  CLAUDE.md  railway.toml
apps/aprendizagem/backend/: .coverage  .env.example  .env.test  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run_migrations.sh  setup_simple.ps1
apps/aprendizagem/backend/app/: main.py
apps/aprendizagem/backend/app/api/: auth.py  chat.py  children.py  exam.py  health.py  lessons.py  parents.py  stages.py
apps/aprendizagem/backend/app/core/: cache.py  config.py  dependencies.py  redis_client.py  security.py  timezone.py
apps/aprendizagem/backend/app/db/: client.py
apps/aprendizagem/backend/app/db/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_curriculum_redesign.sql  004_curriculum_seed.sql  005_new_curriculum.sql  006_add_child_username.sql  007_more_prompt_templates.sql  008_cleanup_child_badges.sql  009_adapted_content.sql  010_english_content.sql  011_badges_english.sql  012_lesson_descriptions_en.sql  013_force_lesson_translations.sql  014_age_limit_to_18.sql  015_thinking_stage.sql  016_thinking_en_and_templates.sql  017_mastery_stage.sql  018_curriculum_v3_reset.sql  019_missao_02.sql  020_missao_03.sql  021_missao_04.sql  022_missao_05.sql  023_missao_06.sql  (+10 more)
apps/aprendizagem/backend/app/safety/: blocklist.txt
apps/aprendizagem/backend/app/schemas/: __init__.py  auth.py  chat.py  children.py  common.py  lessons.py
apps/aprendizagem/backend/app/services/: claude_client.py  gamification.py  moderation.py
apps/aprendizagem/backend/tests/: conftest.py  test_curriculum.py  test_gamification.py  test_security.py
(+107 files in other folders)
