[project]
name = "aprendizagem-backend"
version = "0.1.0"
description = "Backend FastAPI para app educacional de IA para crianças"
authors = [{name = "AutoDev OS", email = "dev@autodev.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "supabase==2.9.1",
    "asyncpg==0.30.0",
    "anthropic==0.40.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "structlog==24.4.0",
    "httpx==0.27.2",
    "pytz==2024.2",
    "email-validator==2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
    "respx==0.21.1",
    "ruff==0.8.18"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling nao descobre o pacote sozinho porque o name do projeto
# (aprendizagem-backend) nao bate com a pasta de codigo (app). Aponta
# explicito para evitar erro "unable to determine which files to ship".
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=40"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"